# github-webhook

./: .gitignore  Makefile  README.md  config.yaml.example  events.db-shm  events.db-wal  pyproject.toml
src/github_webhook/: __main__.py  app.py  config.py  errors.py  handlers.py  queue.py  store.py  workers.py
src/github_webhook/providers/: __init__.py  base.py  github.py  jira.py
tests/: test_store.py  test_webhook.py
